# github-chatbot

./: .gitignore  README.md  app.py  build_database.py  pyproject.toml  requirements.txt
.github/workflows/: update_index.yml
src/: app.py  config.py
src/indexing/: build_index.py
